[gd_scene load_steps=11 format=2]

[ext_resource path="res://Src/Button Theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/font1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Src/Normal Button.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_color = Color( 0.101961, 0.180392, 0.403922, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.105882, 0.117647, 0.172549, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.133333, 0.160784, 0.298039, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.164706, 0.239216, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0627451, 0.0745098, 0.117647, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 2 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = ExtResource( 4 )
Button/styles/pressed = SubResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 181.0
color = Color( 0.0117647, 0.0235294, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 35.0
margin_top = 13.0
margin_right = 282.0
margin_bottom = 66.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.541176, 0.0117647, 0.0117647, 1 )
bbcode_enabled = true
bbcode_text = "[shake rate=20 level=3]  Possession:
    Demonic Pact[/shake]  "
text = "  Possession:
    Demonic Pact  "

[node name="Play" type="Button" parent="."]
margin_left = 25.0
margin_top = 85.0
margin_right = 91.0
margin_bottom = 105.0
theme = ExtResource( 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Button" parent="."]
margin_left = 25.0
margin_top = 111.0
margin_right = 91.0
margin_bottom = 131.0
theme = SubResource( 6 )
text = "HELP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 25.0
margin_top = 136.0
margin_right = 91.0
margin_bottom = 156.0
theme = ExtResource( 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Instruction" to="." method="_on_Instruction_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
